--- a/chat/index.html
+++ b/chat/index.html
@@ -220,7 +220,7 @@
           digitandoFinal.remove();
           const botMsg = document.createElement("div");
           botMsg.className = "mensagem-container bot";
-          botMsg.innerHTML = `<div class='mensagem'>Perfeito ${nome}, agora irei te direcionar para o site onde você irá fazer sua inscrição.</div>`;
+          botMsg.innerHTML = `<div class='mensagem'>Perfeito ${nome}, agora clique no botão abaixo para ir pro site de inscrição. Te vejo la!</div>`;
           chatBox.appendChild(botMsg);
 
           setTimeout(() => {
