--- a/chat/index.html
+++ b/chat/index.html
@@ -249,7 +249,7 @@
               chatBox.appendChild(userMsg);
               botaoContainer.remove();
               setTimeout(() => {
-                window.location.href = "../index.html";
+                window.location.href = "../inscricao.html";
               }, 3000);
             };
 
