--- a/chat/index.html
+++ b/chat/index.html
@@ -220,7 +220,7 @@
           digitandoFinal.remove();
           const botMsg = document.createElement("div");
           botMsg.className = "mensagem-container bot";
-          botMsg.innerHTML = `<div class='mensagem'>Perfeito ${nome}, agora clique no botão abaixo para ir pro site de inscrição. Te vejo la!</div>`;
+          botMsg.innerHTML = `<div class='mensagem'>Perfeito ${nome}, Agora ao clicar no botão abaixo você será redirecionado para a pagina de inscrição. Te vejo la!</div>`;
           chatBox.appendChild(botMsg);
 
           setTimeout(() => {
@@ -261,5 +261,10 @@
       }
     }
   </script>
+
+<div style="font-size: 13px; color: #666; margin-top: 20px; text-align: center;">
+  Esta plataforma tem caráter informativo e educativo. Não possui vínculo com órgãos oficiais. 
+  Os dados fornecidos são utilizados exclusivamente para fins de orientação e não são armazenados.
+</div>
 </body>
 </html>
