--- a/confirme/index.html
+++ b/confirme/index.html
@@ -116,3 +116,8 @@
   </div>
 </body>
 </html>
+
+</div>
+
+<p style="font-size: 12px; color: #777; text-align: center;">
+  Esta é uma página independente, sem qualquer vínculo com instituições públicas ou governamentais.<br>
