--- a/confirme/index.html
+++ b/confirme/index.html
@@ -107,7 +107,7 @@
     <img src="https://i.imgur.com/gY6Nwvb.png" alt="Ícone flutuante" class="floating-icon">
     <div class="container">
       <div class="mensagem-inscricao">Clique no botão abaixo e realize sua inscrição</div>
-      <img src="https://i.imgur.com/0OrsMZF.png" alt="Logo" class="logo">
+      <img src="https://i.imgur.com/zySVObl.png" alt="Logo" class="logo">
       <button class="btn-inscricao" onclick="window.location.href='../chat'">INSCREVA-SE CLICANDO AQUI</button>
       <div class="termos">
         <a href="#">Termos de Uso</a> e <a href="#">Política de Privacidade</a>
